# heroforge

./: .gitignore  .yamllint.yaml  ARCHITECTURE.md  CLAUDE.md  conftest.py  ods_named_cell_index.md  pyproject.toml  ruff.toml  test_all.sh
.claude/skills/rules-lookup/: SKILL.md
docs/plans/: rules-container-refactor.md
src/heroforge/: hfg_reader.py
src/heroforge/engine/: bonus.py  character.py  classes.py  classes_races.py  conditions.py  derived_pools.py  domains.py  effects.py  enums.py  equipment.py  feats.py  gates.py  magic_items.py  persistence.py  prerequisites.py  races.py  resources.py  sheet.py  sheet_schema.py  skills.py  spellcasting.py  spells.py  stat.py  templates.py
src/heroforge/export/: renderer.py  sheet_data.py
src/heroforge/rules/: _gen_common.py  _gen_magic_item_enums.py  _gen_pool_keys.py  combine_str_enum.py  known.py  loader.py  rules.py  schema.py
src/heroforge/ui/: app.py  app_state.py  main_window.py
tests/: test_bonus.py  test_character.py  test_charopt_builds.py  test_class_features.py  test_classes.py  test_classes_races.py  test_combat.py  test_conditions_srd_yaml.py  test_domains.py  test_effects.py  test_equipment.py  test_export.py  test_feats.py  test_feats_srd_yaml.py  test_known_enums.py  test_magic_item_enums.py  test_magic_items.py  test_persistence.py  test_pool_keys.py  test_prerequisites.py  test_races.py  test_skill_allocation.py  test_skills.py  test_spells_srd_yaml.py  test_spells_yaml.py  test_stat.py  test_stats_yaml.py  test_templates.py  test_ui_smoke.py  test_yaml_errors.py  test_yaml_lint.py
tests/fixtures/bad_yaml/: bad_armor.char.yaml  bad_buff.char.yaml  bad_buff_field.char.yaml  bad_class.char.yaml  bad_feat.char.yaml  bad_level_field.char.yaml  bad_race.char.yaml  bad_shield.char.yaml  bad_skill.char.yaml  bad_template.char.yaml  bad_worn.char.yaml
tests/integration/: conftest.py  test_full_builds.py  test_golden.py
tests/integration/base_characters/: archetype_buffed.char.yaml  archetype_buffed.expected.yaml  archetype_multiclass.char.yaml  archetype_multiclass.expected.yaml  archetype_template.char.yaml  archetype_template.expected.yaml  base_bard.char.yaml  (+51 more)
tests/skills/: test_rules_lookup.py
(+267 files in other folders)
